--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
   <div class="container">
-    <p id="advice-id">ADVICE # <span id="advice-id-number"></span> </p>
-    <p id="advice-text">"It is easy to sit up and take notice, what´s difficult is getting up and taking action."</p>
-  </div>
-
-  <div>
+    <p id="advice-id">ADVICE #<span id="advice-id-number"></span> </p>
+    <p class="advice-text">"<span id="advice-text">It is easy to sit up and take notice, what´s difficult is getting up and taking action.</span>"</p>
+    <div class="pattern-divider"></div>
     <button id="btn-nueva-cita">
       <img src="./images/icon-dice.svg" alt="">
     </button>
   </div>
-  
+
 <script src="app.js"></script>
 </body>
 </html>
